Small fixes here and there
Compatible with other video types (probably). Initial link box width is
snug as it should be. Hover box clears on mousedown and reappears on
mouseup; also switches sides when too close to right edge. Styled the
hover box, now stays on top (z-axis). Comment/whitespace cleanup.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 #video {
-    height: 64%;
+	height: 64%;
 	float: left;
 }
 
@@ -39,9 +39,9 @@ body {
 	color: DarkRed;
 	position: absolute;
 	height: 30%;
-    height: -webkit-calc(30% - 6px);
-    height: -moz-calc(30% - 6px);
-    height: calc(30% - 6px);
+	height: -webkit-calc(30% - 6px);
+	height: -moz-calc(30% - 6px);
+	height: calc(30% - 6px);
 	left: 10px;
 	bottom: 10px;
 	right: 10px;
@@ -59,9 +59,9 @@ body {
 	font-family: sans-serif;
 	font-size: 22px;
 	height: auto;
-    height: -webkit-calc(100% - 28px);
-    height: -moz-calc(100% - 28px);
-    height: calc(100% - 28px);
+	height: -webkit-calc(100% - 28px);
+	height: -moz-calc(100% - 28px);
+	height: calc(100% - 28px);
 	width: 5000px;
 }
 
@@ -69,12 +69,12 @@ body {
 	position: relative;
 	border: ridge 3px #999;
 	background-color: #555;
-	padding: 4px;
+	padding: 4px 7px;
 	float: left;
 	height: 100%;
-    height: -webkit-calc(100% - 12px);
-    height: -moz-calc(100% - 12px);
-    height: calc(100% - 12px);
+	height: -webkit-calc(100% - 14px);
+	height: -moz-calc(100% - 14px);
+	height: calc(100% - 14px);
 	margin-right: 10px;
 	overflow: visible;
 }
@@ -95,7 +95,7 @@ body {
 	float: left;
 }
 
-.hover-box  {
+.hover-box {
 	position: absolute;
 	white-space: nowrap;
 	height: auto;
@@ -104,11 +104,16 @@ body {
 	font-size: 17px;
 	color: white;
 	background-color: black;
-	border: ridge 3px #999;
+	border: solid 3px #DDD;
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	font-style: italic;
+	z-index: 10;
+	line-height: 30px;
 }
 
 .hover-list {
+	list-style-position: inside;
+	list-style-type: none;
 	margin: 0;
+	padding: 0;
 }
